dream cording navbar markup

--- a/index.html
+++ b/index.html
@@ -13,8 +13,35 @@
     <!-- font-family: 'Open Sans', sans-serif; -->
     <link rel="icon" type="image/png" href="imgs/logo.png">
     <link rel="stylesheet" href="css/style.css">
+    <script src="main.js" defer></script>
 </head>
 <body>
-    
+    <!-- nav_bar -->
+    <nav id="navbar">
+        <div class="navbar__logo">
+            <i class="fas fa-asterisk"></i>
+            <a href="#">young</a>
+        </div>
+        <div class="navbar__menu">
+            <ul>
+                <li class="navbar__menu__item">Home</li>
+                <li class="navbar__menu__item">About</li>
+                <li class="navbar__menu__item">Skills</li>
+                <li class="navbar__menu__item">My Work</li>
+                <li class="navbar__menu__item">Testimonials</li>
+                <li class="navbar__menu__item">Contact</li>
+            </ul>
+        </div>
+    </nav>
+    <!-- about -->
+    <section id="about"></section>
+    <!-- skills -->
+    <section id="skills"></section>
+    <!-- work -->
+    <section id="work"></section>
+    <!-- testimonials -->
+    <section id="testimonials"></section>
+    <!-- contact -->
+    <section id="contact"></section>
 </body>
 </html>
