dream cording home markup

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
             </ul>
         </div>
     </nav>
+    <!-- home -->
+    <section id="home">
+        <img src="imgs/profile.png" alt="young profile photo" class="home__avatar">
+        <h1 class="home__title">Hello <br> i'm Young</h1>
+        <h2 class="home__description">세상을 바라보는 시선에 코딩을 입히다.</h2>
+        <button class="home__contact">Contact Me</button>
+    </section>
     <!-- about -->
     <section id="about"></section>
     <!-- skills -->
