dream cording about markup

--- a/index.html
+++ b/index.html
@@ -41,7 +41,38 @@
         <button class="home__contact">Contact Me</button>
     </section>
     <!-- about -->
-    <section id="about"></section>
+    <section id="about">
+        <h1>About me</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas vel facere dicta sunt! Consequatur omnis, atque iusto sapiente accusamus molestiae a sequi, repudiandae, consectetur fugiat magni quia nobis temporibus eos?</p>
+        <div class="about__majors">
+            <div class="majors">
+                <div class="major__icon">
+                    <i class="fab fa-html5"></i>
+                </div>
+                <div class="major__title">HTML</div>
+                <div class="description">홈페이지의 골격을 만드는 마크업 언어</div>
+            </div>
+            <div class="majors">
+                <div class="major__icon">
+                    <i class="fab fa-css3-alt"></i>
+                </div>
+                <div class="major__title">CSS</div>
+                <div class="description">홈페이지의 살을 입히는 스타일 케스케이딩 언어</div>
+            </div>
+            <div class="majors">
+                <div class="major__icon">
+                    <i class="fab fa-js-square"></i>
+                </div>
+                <div class="major__title">Javascript</div>
+                <div class="description">홈페이지의 동적인 움직임을 입히는 언어</div>
+            </div>
+        </div>
+        <div class="about__jobs">
+            <img src="imgs/ccclogo.png" alt="한국대학생선교회" class="job__logo">
+            <p class="job__name">한국대학생선교회 36기 전임간사</p>
+            <p class="job__period">2016-2021</p>
+        </div>
+    </section>
     <!-- skills -->
     <section id="skills"></section>
     <!-- work -->
