dream cording skills markup

--- a/index.html
+++ b/index.html
@@ -70,11 +70,89 @@
         <div class="about__jobs">
             <img src="imgs/ccclogo.png" alt="한국대학생선교회" class="job__logo">
             <p class="job__name">한국대학생선교회 36기 전임간사</p>
-            <p class="job__period">2016-2021</p>
+            <p class="job__period">2016년 3월 - 2021년 3월</p>
         </div>
     </section>
     <!-- skills -->
-    <section id="skills"></section>
+    <section id="skills">
+        <h1>Skills</h1>
+        <h2>Skills & Attributes</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, id. Ipsa, velit facere. Voluptatem aliquam necessitatibus quam quas, enim repellat fugiat vitae cumque doloremque fugit consequuntur perspiciatis eius, similique provident.</p>
+        <div class="skillset">
+            <div class="skillset__left">
+                <h3 class="skillset__title">Skills</h3>
+                <!-- Html  -->
+                <div class="skill_description">
+                    <span>HTML</span>
+                    <span>99%</span>
+                </div>
+                <div class="skill__bar">
+                    <div class="skill__value"></div>
+                </div>
+                <!-- Css  -->
+                <div class="skill_description">
+                    <span>CSS</span>
+                    <span>99%</span>
+                </div>
+                <div class="skill__bar">
+                    <div class="skill__value"></div>
+                </div>
+                <!-- Javascript -->
+                <div class="skill_description">
+                    <span>Javascript</span>
+                    <span>99%</span>
+                </div>
+                <div class="skill__bar">
+                    <div class="skill__value"></div>
+                </div>
+                <!-- Typescript -->
+                <div class="skill_description">
+                    <span>Typescript</span>
+                    <span>99%</span>
+                </div>
+                <div class="skill__bar">
+                    <div class="skill__value"></div>
+                </div>
+                <!-- REACT -->
+                <div class="skill_description">
+                    <span>REACT</span>
+                    <span>99%</span>
+                </div>
+                <div class="skill__bar">
+                    <div class="skill__value"></div>
+                </div>
+                <!-- NODE.JS -->
+                <div class="skill_description">
+                    <span>NODE.JS</span>
+                    <span>99%</span>
+                </div>
+                <div class="skill__bar">
+                    <div class="skill__value"></div>
+                </div>
+            </div>
+            <div class="skillset__right">
+                <div class="tools">
+                    <h3 class="skillset__title">Tools</h3>
+                    <ul class="tools__list">
+                        <li><span>Visual Studio</span></li>
+                        <li><span>Git Hub</span></li>
+                        <li><span>Team Foundation</span></li>
+                        <li><span>Adobe programs</span></li>
+                        <li><span>Apple programs</span></li>
+                        <li><span>sketch app</span></li>
+                    </ul>
+                </div>
+                <div class="ect">
+                    <h3 class="skillset__title">ECT</h3>
+                    <ul class="etc__list">
+                        <li><span>math</span></li>
+                        <li><span>git</span></li>
+                        <li><span>movie</span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- work -->
     <section id="work"></section>
     <!-- testimonials -->
