--- a/index.html
+++ b/index.html
@@ -154,7 +154,74 @@
         </div>
     </section>
     <!-- work -->
-    <section id="work"></section>
+    <section id="work">
+        <h1>My Work</h1>
+        <h2>Projects</h2>
+        <div class="work__categories">
+            <button class="cotegory__btn">ALL<span class="ctegory__count">8</span></button>
+            <button class="cotegory__btn">Front-end<span class="ctegory__count">8</span></button>
+            <button class="cotegory__btn">Back-end<span class="ctegory__count">2</span></button>
+            <button class="cotegory__btn">Mobiles<span class="ctegory__count">1</span></button>
+        </div>
+        <div class="work__projects">
+            <a href="#" class="project" target="blank">
+                <img class="project__img"src="/projects/project1.png" alt="project1">
+                <div class="project__description">
+                    <h3>project1 Site</h3>
+                    <span>Clone cording with HTML and CSS</span>
+                </div>
+            </a>
+            <a href="#" class="project" target="blank">
+                <img class="project__img"src="/projects/project2.png" alt="project2">
+                <div class="project__description">
+                    <h3>project2 Site</h3>
+                    <span>Clone cording with HTML and CSS</span>
+                </div>
+            </a>
+            <a href="#" class="project" target="blank">
+                <img class="project__img"src="/projects/project3.png" alt="project3">
+                <div class="project__description">
+                    <h3>project3 Site</h3>
+                    <span>Clone cording with HTML and CSS</span>
+                </div>
+            </a>
+            <a href="#" class="project" target="blank">
+                <img class="project__img"src="/projects/project4.png" alt="project4">
+                <div class="project__description">
+                    <h3>project4 Site</h3>
+                    <span>Clone cording with HTML and CSS</span>
+                </div>
+            </a>
+            <a href="#" class="project" target="blank">
+                <img class="project__img"src="/projects/project5.png" alt="project5">
+                <div class="project__description">
+                    <h3>project5 Site</h3>
+                    <span>Clone cording with HTML and CSS</span>
+                </div>
+            </a>
+            <a href="#" class="project" target="blank">
+                <img class="project__img"src="/projects/project6.png" alt="project6">
+                <div class="project__description">
+                    <h3>project6 Site</h3>
+                    <span>Clone cording with HTML and CSS</span>
+                </div>
+            </a>
+            <a href="#" class="project" target="blank">
+                <img class="project__img"src="/projects/project7.png" alt="project7">
+                <div class="project__description">
+                    <h3>project7 Site</h3>
+                    <span>Clone cording with HTML and CSS</span>
+                </div>
+            </a>
+            <a href="#" class="project" target="blank">
+                <img class="project__img"src="/projects/project8.png" alt="project8">
+                <div class="project__description">
+                    <h3>project8 Site</h3>
+                    <span>Clone cording with HTML and CSS</span>
+                </div>
+            </a>
+        </div>
+    </section>
     <!-- testimonials -->
     <section id="testimonials"></section>
     <!-- contact -->
