--- a/index.html
+++ b/index.html
@@ -165,56 +165,56 @@
         </div>
         <div class="work__projects">
             <a href="#" class="project" target="blank">
-                <img class="project__img"src="/projects/project1.png" alt="project1">
+                <img class="project__img"src="/imgs/projects/project1.png" alt="project1">
                 <div class="project__description">
                     <h3>project1 Site</h3>
                     <span>Clone cording with HTML and CSS</span>
                 </div>
             </a>
             <a href="#" class="project" target="blank">
-                <img class="project__img"src="/projects/project2.png" alt="project2">
+                <img class="project__img"src="/imgs/projects/project2.png" alt="project2">
                 <div class="project__description">
                     <h3>project2 Site</h3>
                     <span>Clone cording with HTML and CSS</span>
                 </div>
             </a>
             <a href="#" class="project" target="blank">
-                <img class="project__img"src="/projects/project3.png" alt="project3">
+                <img class="project__img"src="/imgs/projects/project3.png" alt="project3">
                 <div class="project__description">
                     <h3>project3 Site</h3>
                     <span>Clone cording with HTML and CSS</span>
                 </div>
             </a>
             <a href="#" class="project" target="blank">
-                <img class="project__img"src="/projects/project4.png" alt="project4">
+                <img class="project__img"src="/imgs/projects/project4.png" alt="project4">
                 <div class="project__description">
                     <h3>project4 Site</h3>
                     <span>Clone cording with HTML and CSS</span>
                 </div>
             </a>
             <a href="#" class="project" target="blank">
-                <img class="project__img"src="/projects/project5.png" alt="project5">
+                <img class="project__img"src="/imgs/projects/project5.png" alt="project5">
                 <div class="project__description">
                     <h3>project5 Site</h3>
                     <span>Clone cording with HTML and CSS</span>
                 </div>
             </a>
             <a href="#" class="project" target="blank">
-                <img class="project__img"src="/projects/project6.png" alt="project6">
+                <img class="project__img"src="/imgs/projects/project6.png" alt="project6">
                 <div class="project__description">
                     <h3>project6 Site</h3>
                     <span>Clone cording with HTML and CSS</span>
                 </div>
             </a>
             <a href="#" class="project" target="blank">
-                <img class="project__img"src="/projects/project7.png" alt="project7">
+                <img class="project__img"src="/imgs/projects/project7.png" alt="project7">
                 <div class="project__description">
                     <h3>project7 Site</h3>
                     <span>Clone cording with HTML and CSS</span>
                 </div>
             </a>
             <a href="#" class="project" target="blank">
-                <img class="project__img"src="/projects/project8.png" alt="project8">
+                <img class="project__img"src="/imgs/projects/project8.png" alt="project8">
                 <div class="project__description">
                     <h3>project8 Site</h3>
                     <span>Clone cording with HTML and CSS</span>
@@ -223,7 +223,26 @@
         </div>
     </section>
     <!-- testimonials -->
-    <section id="testimonials"></section>
+    <section id="testimonials">
+        <h1>Testimonials</h1>
+        <h3>see what they say about me</h3>
+        <div class="testimonials">
+            <div class="testimonial">
+                <img src="/imgs/testimonials/avatar1.jpeg" alt="People" class="testimonial__avatar">
+            </div>
+            <div class="testimonial__speech-bubble">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab vel maiores modi cupiditate dolore reiciendis nisi qui voluptatem unde provident optio, doloremque, obcaecati maxime repudiandae repellat non nostrum facilis ipsam.</p>
+                <p class="name"><a href="#">bobin</a> / samsung</p>
+            </div>
+            <div class="testimonial">
+                <img src="/imgs/testimonials/avatar2.jpeg" alt="People" class="testimonial__avatar">
+            </div>
+            <div class="testimonial__speech-bubble">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab vel maiores modi cupiditate dolore reiciendis nisi qui voluptatem unde provident optio, doloremque, obcaecati maxime repudiandae repellat non nostrum facilis ipsam.</p>
+                <p class="name"><a href="#">young</a> / LG</p>
+            </div>
+        </div>
+    </section>
     <!-- contact -->
     <section id="contact"></section>
 </body>
