--- a/index.html
+++ b/index.html
@@ -244,6 +244,20 @@
         </div>
     </section>
     <!-- contact -->
-    <section id="contact"></section>
+    <section id="contact">
+        <h1 class="contact__title">Let's Talk</h1>
+        <h2 class="contact__email">kug2001@gmail.com</h2>
+        <div class="contact__link">
+            <a href="https://gist.github.com/kug2001" target="blank">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="https://www.instagram.com/vision_finder/" target="blank">
+                <i class="fab fa-instagram-square"></i>
+            </a>
+        </div>
+        <div class="contact__rights">
+            2020 Dream coding young - All rights reserved
+        </div>
+    </section>
 </body>
 </html>
