dream cording navbar styling

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <!-- nav_bar -->
     <nav id="navbar">
         <div class="navbar__logo">
-            <i class="fas fa-asterisk"></i>
-            <a href="#">young</a>
+            <i class="fab fa-diaspora"></i>
+            <a href="#">Young</a>
         </div>
         <div class="navbar__menu">
-            <ul>
-                <li class="navbar__menu__item">Home</li>
+            <ul class="navbar__menu">
+                <li class="navbar__menu__item active">Home</li>
                 <li class="navbar__menu__item">About</li>
                 <li class="navbar__menu__item">Skills</li>
                 <li class="navbar__menu__item">My Work</li>
