dream cording abouy styling

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <!-- nav_bar -->
-    <nav id="navbar">
+    <nav id="navbar" class="section__common">
         <div class="navbar__logo">
             <i class="fab fa-diaspora"></i>
             <a href="#">Young</a>
@@ -34,14 +34,14 @@
         </div>
     </nav>
     <!-- home -->
-    <section id="home">
+    <section id="home" class="section__common">
         <img src="imgs/profile.png" alt="young profile photo" class="home__avatar">
         <h1 class="home__title">Hello <br> i'm Young</h1>
         <h2 class="home__description">세상을 바라보는 시선에 코딩을 입히다.</h2>
         <button class="home__contact">Contact Me</button>
     </section>
     <!-- about -->
-    <section id="about">
+    <section id="about" class="section__common">
         <h1>About me</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas vel facere dicta sunt! Consequatur omnis, atque iusto sapiente accusamus molestiae a sequi, repudiandae, consectetur fugiat magni quia nobis temporibus eos?</p>
         <div class="about__majors">
@@ -50,31 +50,33 @@
                     <i class="fab fa-html5"></i>
                 </div>
                 <div class="major__title">HTML</div>
-                <div class="description">홈페이지의 골격을 만드는 마크업 언어</div>
+                <div class="major__description">홈페이지의 골격을 만드는 마크업 언어</div>
             </div>
             <div class="majors">
                 <div class="major__icon">
                     <i class="fab fa-css3-alt"></i>
                 </div>
                 <div class="major__title">CSS</div>
-                <div class="description">홈페이지의 살을 입히는 스타일 케스케이딩 언어</div>
+                <div class="major__description">홈페이지의 살을 입히는 스타일 케스케이딩 언어</div>
             </div>
             <div class="majors">
                 <div class="major__icon">
                     <i class="fab fa-js-square"></i>
                 </div>
                 <div class="major__title">Javascript</div>
-                <div class="description">홈페이지의 동적인 움직임을 입히는 언어</div>
+                <div class="major__description">홈페이지의 동적인 움직임을 입히는 언어</div>
             </div>
         </div>
         <div class="about__jobs">
             <img src="imgs/ccclogo.png" alt="한국대학생선교회" class="job__logo">
-            <p class="job__name">한국대학생선교회 36기 전임간사</p>
-            <p class="job__period">2016년 3월 - 2021년 3월</p>
+            <div class="job_decription">
+                <p class="job__name">한국대학생선교회 36기 전임간사</p>
+                <p class="job__period">2016년 3월 - 2021년 3월</p>
+            </div>
         </div>
     </section>
     <!-- skills -->
-    <section id="skills">
+    <section id="skills" class="section__common">
         <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, id. Ipsa, velit facere. Voluptatem aliquam necessitatibus quam quas, enim repellat fugiat vitae cumque doloremque fugit consequuntur perspiciatis eius, similique provident.</p>
@@ -154,7 +156,7 @@
         </div>
     </section>
     <!-- work -->
-    <section id="work">
+    <section id="work" class="section__common">
         <h1>My Work</h1>
         <h2>Projects</h2>
         <div class="work__categories">
@@ -223,7 +225,7 @@
         </div>
     </section>
     <!-- testimonials -->
-    <section id="testimonials">
+    <section id="testimonials" class="section__common">
         <h1>Testimonials</h1>
         <h3>see what they say about me</h3>
         <div class="testimonials">
@@ -244,7 +246,7 @@
         </div>
     </section>
     <!-- contact -->
-    <section id="contact">
+    <section id="contact" class="section__common">
         <h1 class="contact__title">Let's Talk</h1>
         <h2 class="contact__email">kug2001@gmail.com</h2>
         <div class="contact__link">
