dream cording skills styling

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <button class="home__contact">Contact Me</button>
     </section>
     <!-- about -->
-    <section id="about" class="section__common">
+    <section id="about" class="section__common section__container">
         <h1>About me</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas vel facere dicta sunt! Consequatur omnis, atque iusto sapiente accusamus molestiae a sequi, repudiandae, consectetur fugiat magni quia nobis temporibus eos?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas vel facere dicta sunt! Consequatur omnis, atque iusto sapiente acc /usamus molestiae a sequi, repudiandae, consectetur fugiat magni quia nobis temporibus eos?</p>
         <div class="about__majors">
             <div class="majors">
                 <div class="major__icon">
@@ -77,83 +77,92 @@
     </section>
     <!-- skills -->
     <section id="skills" class="section__common">
-        <h1>Skills</h1>
-        <h2>Skills & Attributes</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, id. Ipsa, velit facere. Voluptatem aliquam necessitatibus quam quas, enim repellat fugiat vitae cumque doloremque fugit consequuntur perspiciatis eius, similique provident.</p>
-        <div class="skillset">
-            <div class="skillset__left">
-                <h3 class="skillset__title">Skills</h3>
-                <!-- Html  -->
-                <div class="skill_description">
-                    <span>HTML</span>
-                    <span>99%</span>
+        <section class="section__common section__container">
+            <h1>Skills</h1>
+            <h2>Skills & Attributes</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ill um, id. Ipsa, velit facere. Voluptatem aliquam necessitatibus quam quas, enim repellat fugiat vitae cumque doloremque fugit consequuntur perspiciatis eius, similique provident.</p>
+            <div class="skillset">
+                <div class="skillset__left">
+                    <h3 class="skillset__title">Skills</h3>
+                    <!-- Html  -->
+                    <div class="skill">
+                        <div class="skill_description">
+                            <span>HTML</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width: 90%;"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill_description">
+                            <span>CSS</span>
+                            <span>60%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width: 60%;""></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill_description">
+                            <span>Javascript</span>
+                            <span>50%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width: 50%""></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill_description">
+                            <span>Typescript</span>
+                            <span>10%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width: 10%""></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill_description">
+                            <span>REACT</span>
+                            <span>10%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width: 10%""></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill_description">
+                            <span>NODE.JS</span>
+                            <span>30%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width: 30%""></div>
+                        </div>
+                    </div>
                 </div>
-                <div class="skill__bar">
-                    <div class="skill__value"></div>
-                </div>
-                <!-- Css  -->
-                <div class="skill_description">
-                    <span>CSS</span>
-                    <span>99%</span>
-                </div>
-                <div class="skill__bar">
-                    <div class="skill__value"></div>
-                </div>
-                <!-- Javascript -->
-                <div class="skill_description">
-                    <span>Javascript</span>
-                    <span>99%</span>
-                </div>
-                <div class="skill__bar">
-                    <div class="skill__value"></div>
-                </div>
-                <!-- Typescript -->
-                <div class="skill_description">
-                    <span>Typescript</span>
-                    <span>99%</span>
-                </div>
-                <div class="skill__bar">
-                    <div class="skill__value"></div>
-                </div>
-                <!-- REACT -->
-                <div class="skill_description">
-                    <span>REACT</span>
-                    <span>99%</span>
-                </div>
-                <div class="skill__bar">
-                    <div class="skill__value"></div>
-                </div>
-                <!-- NODE.JS -->
-                <div class="skill_description">
-                    <span>NODE.JS</span>
-                    <span>99%</span>
-                </div>
-                <div class="skill__bar">
-                    <div class="skill__value"></div>
+                <div class="skillset__right">
+                    <div class="tools">
+                        <h3 class="skillset__title">Tools</h3>
+                        <ul class="tools__list">
+                            <li><span>Visual Studio</span></li>
+                            <li><span>Git Hub</span></li>
+                            <li><span>Team Foundation</span></li>
+                            <li><span>Adobe programs</span></li>
+                            <li><span>Apple programs</span></li>
+                            <li><span>sketch app</span></li>
+                        </ul>
+                    </div>
+                    <div class="ect">
+                        <h3 class="skillset__title">ECT</h3>
+                        <ul class="etc__list">
+                            <li><span>math</span></li>
+                            <li><span>git</span></li>
+                            <li><span>movie</span></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-            <div class="skillset__right">
-                <div class="tools">
-                    <h3 class="skillset__title">Tools</h3>
-                    <ul class="tools__list">
-                        <li><span>Visual Studio</span></li>
-                        <li><span>Git Hub</span></li>
-                        <li><span>Team Foundation</span></li>
-                        <li><span>Adobe programs</span></li>
-                        <li><span>Apple programs</span></li>
-                        <li><span>sketch app</span></li>
-                    </ul>
-                </div>
-                <div class="ect">
-                    <h3 class="skillset__title">ECT</h3>
-                    <ul class="etc__list">
-                        <li><span>math</span></li>
-                        <li><span>git</span></li>
-                        <li><span>movie</span></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+        </section>
     </section>
     <!-- work -->
     <section id="work" class="section__common">
