dream cording work styling

--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
         <h1>My Work</h1>
         <h2>Projects</h2>
         <div class="work__categories">
-            <button class="cotegory__btn">ALL<span class="ctegory__count">8</span></button>
-            <button class="cotegory__btn">Front-end<span class="ctegory__count">8</span></button>
-            <button class="cotegory__btn">Back-end<span class="ctegory__count">2</span></button>
-            <button class="cotegory__btn">Mobiles<span class="ctegory__count">1</span></button>
+            <button class="category__btn active">ALL<span class="category__count">8</span></button>
+            <button class="category__btn">Front-end<span class="category__count">8</span></button>
+            <button class="category__btn">Back-end<span class="category__count">2</span></button>
+            <button class="category__btn">Mobiles<span class="category__count">1</span></button>
         </div>
         <div class="work__projects">
             <a href="#" class="project" target="blank">
