dream cording testimonials, contact styling test

--- a/index.html
+++ b/index.html
@@ -240,34 +240,37 @@
         <div class="testimonials">
             <div class="testimonial">
                 <img src="/imgs/testimonials/avatar1.jpeg" alt="People" class="testimonial__avatar">
+                <div class="testimonial__speech-bubble">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab vel maiores modi cupiditate dolore reiciendis nisi qui voluptatem unde provident optio, doloremque, obcaecati maxime repudiandae repellat non nostrum facilis ipsam.</p>
+                    <p class="name"><a href="#">obin</a> / samsung</p>
+                </div>
             </div>
-            <div class="testimonial__speech-bubble">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab vel maiores modi cupiditate dolore reiciendis nisi qui voluptatem unde provident optio, doloremque, obcaecati maxime repudiandae repellat non nostrum facilis ipsam.</p>
-                <p class="name"><a href="#">bobin</a> / samsung</p>
-            </div>
+            
             <div class="testimonial">
                 <img src="/imgs/testimonials/avatar2.jpeg" alt="People" class="testimonial__avatar">
-            </div>
-            <div class="testimonial__speech-bubble">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab vel maiores modi cupiditate dolore reiciendis nisi qui voluptatem unde provident optio, doloremque, obcaecati maxime repudiandae repellat non nostrum facilis ipsam.</p>
-                <p class="name"><a href="#">young</a> / LG</p>
+                <div class="testimonial__speech-bubble">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab vel maiores modi cupiditate dolore reiciendis nisi qui voluptatem unde provident optio, doloremque, obcaecati maxime repudiandae repellat non nostrum facilis ipsam.</p>
+                    <p class="name"><a href="#">Young</a> / LG</p>
+                </div>
             </div>
         </div>
     </section>
     <!-- contact -->
     <section id="contact" class="section__common">
-        <h1 class="contact__title">Let's Talk</h1>
-        <h2 class="contact__email">kug2001@gmail.com</h2>
-        <div class="contact__link">
-            <a href="https://gist.github.com/kug2001" target="blank">
-                <i class="fab fa-github"></i>
-            </a>
-            <a href="https://www.instagram.com/vision_finder/" target="blank">
-                <i class="fab fa-instagram-square"></i>
-            </a>
-        </div>
-        <div class="contact__rights">
-            2020 Dream coding young - All rights reserved
+        <div class="contact">
+            <h1 class="contact__title">Let's Talk</h1>
+            <h2 class="contact__email">kug2001@gmail.com</h2>
+            <div class="contact__link">
+                <a href="https://gist.github.com/kug2001" target="blank">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="https://www.instagram.com/vision_finder/" target="blank">
+                    <i class="fab fa-instagram-square"></i>
+                </a>
+            </div>
+            <div class="contact__rights">
+                2020 Dream coding young - All rights reserved
+            </div>
         </div>
     </section>
 </body>
