--- a/index.html
+++ b/index.html
@@ -235,22 +235,23 @@
     </section>
     <!-- testimonials -->
     <section id="testimonials" class="section__common">
-        <h1>Testimonials</h1>
-        <h3>see what they say about me</h3>
-        <div class="testimonials">
-            <div class="testimonial">
-                <img src="/imgs/testimonials/avatar1.jpeg" alt="People" class="testimonial__avatar">
-                <div class="testimonial__speech-bubble">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab vel maiores modi cupiditate dolore reiciendis nisi qui voluptatem unde provident optio, doloremque, obcaecati maxime repudiandae repellat non nostrum facilis ipsam.</p>
-                    <p class="name"><a href="#">obin</a> / samsung</p>
+        <div class="section__container">
+            <h1>Testimonials</h1>
+            <h3>see what they say about me</h3>
+            <div class="testimonials">
+                <div class="testimonial">
+                    <img src="/imgs/testimonials/avatar1.jpeg" alt="People" class="testimonial__avatar">
+                    <div class="testimonial__speech-bubble">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab vel maiores modi cupiditate dolore reiciendis nisi qui voluptatem unde provident optio, doloremque, obcaecati maxime repudiandae repellat non nostrum facilis ipsam.</p>
+                        <p class="name"><a href="#">obin</a> / samsung</p>
+                    </div>
                 </div>
-            </div>
-            
-            <div class="testimonial">
-                <img src="/imgs/testimonials/avatar2.jpeg" alt="People" class="testimonial__avatar">
-                <div class="testimonial__speech-bubble">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab vel maiores modi cupiditate dolore reiciendis nisi qui voluptatem unde provident optio, doloremque, obcaecati maxime repudiandae repellat non nostrum facilis ipsam.</p>
-                    <p class="name"><a href="#">Young</a> / LG</p>
+                <div class="testimonial">
+                    <img src="/imgs/testimonials/avatar2.jpeg" alt="People" class="testimonial__avatar">
+                    <div class="testimonial__speech-bubble">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab vel maiores modi cupiditate dolore reiciendis nisi qui voluptatem unde provident optio, doloremque, obcaecati maxime repudiandae repellat non nostrum facilis ipsam.</p>
+                        <p class="name"><a href="#">Young</a> / LG</p>
+                    </div>
                 </div>
             </div>
         </div>
