--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                 <li class="navbar__menu__item">Contact</li>
             </ul>
         </div>
+        <!-- toggle button  -->
+        <button class="navbar__toggle-btn">
+            <i class="fas fa-bars"></i>
+        </button>
     </nav>
     <!-- home -->
     <section id="home" class="section__common">
