--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <!-- nav_bar -->
-    <nav id="navbar" class="section__common">
+    <nav id="navbar" class="section__common navbar">
         <div class="navbar__logo">
             <i class="fab fa-diaspora"></i>
             <a href="#">Young</a>
@@ -278,5 +278,14 @@
             </div>
         </div>
     </section>
+    <footer>
+        <p class="guesses"></p>
+        <p class="lastResult"></p>
+        <p class="lowOrHi"></p>
+        <label for="guessField"> Enter a guess: </label>
+        <input type="text" id="guessField" class="guessField">
+        <input type="submit" value="Submit guess" class="guessSubmit">
+        
+    </footer>
 </body>
 </html>
