javascript contact btn

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <img src="imgs/profile.png" alt="young profile photo" class="home__avatar">
         <h1 class="home__title">Hello <br> i'm Young</h1>
         <h2 class="home__description">세상을 바라보는 시선에 코딩을 입히다.</h2>
-        <button class="home__contact">Contact Me</button>
+        <button class="home__contact" data-link="#contact">Contact Me</button>
     </section>
     <!-- about -->
     <section id="about" class="section__common section__container">
