javascript home Transparent

--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
     </nav>
     <!-- home -->
     <section id="home" class="section__common">
-        <img src="imgs/profile.png" alt="young profile photo" class="home__avatar">
-        <h1 class="home__title">Hello <br> i'm Young</h1>
-        <h2 class="home__description">세상을 바라보는 시선에 코딩을 입히다.</h2>
-        <button class="home__contact" data-link="#contact">Contact Me</button>
+        <div class="home__container">
+            <img src="imgs/profile.png" alt="young profile photo" class="home__avatar">
+            <h1 class="home__title">Hello <br> i'm Young</h1>
+            <h2 class="home__description">세상을 바라보는 시선에 코딩을 입히다.</h2>
+            <button class="home__contact" data-link="#contact">Contact Me</button>
+        </div>
     </section>
     <!-- about -->
     <section id="about" class="section__common section__container">
