javascript Arrow up

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <script src="main.js" defer></script>
 </head>
 <body>
+    <div class="arrow__btn">
+        <i class="fas fa-arrow-circle-up" data-link="#top"></i>
+    </div>
     <!-- nav_bar -->
     <nav id="navbar" class="section__common navbar">
         <div class="navbar__logo">
@@ -281,13 +284,6 @@
         </div>
     </section>
     <footer>
-        <p class="guesses"></p>
-        <p class="lastResult"></p>
-        <p class="lowOrHi"></p>
-        <label for="guessField"> Enter a guess: </label>
-        <input type="text" id="guessField" class="guessField">
-        <input type="submit" value="Submit guess" class="guessSubmit">
-        
     </footer>
 </body>
 </html>
