--- a/index.html
+++ b/index.html
@@ -178,10 +178,10 @@
         <h1>My Work</h1>
         <h2>Projects</h2>
         <div class="work__categories">
-            <button class="category__btn active">ALL<span class="category__count">8</span></button>
-            <button class="category__btn">Front-end<span class="category__count">8</span></button>
-            <button class="category__btn">Back-end<span class="category__count">2</span></button>
-            <button class="category__btn">Mobiles<span class="category__count">1</span></button>
+            <button class="category__btn active" data-link="#all">ALL<span class="category__count">8</span></button>
+            <button class="category__btn" data-link="#front-end">Front-end<span class="category__count">8</span></button>
+            <button class="category__btn" data-link="#back-end">Back-end<span class="category__count">2</span></button>
+            <button class="category__btn" data-link="#mobiles">Mobiles<span class="category__count">1</span></button>
         </div>
         <div class="work__projects">
             <a href="#" class="project" target="blank">
