--- a/index.html
+++ b/index.html
@@ -178,62 +178,62 @@
         <h1>My Work</h1>
         <h2>Projects</h2>
         <div class="work__categories">
-            <button class="category__btn active" data-link="#all">ALL<span class="category__count">8</span></button>
-            <button class="category__btn" data-link="#front-end">Front-end<span class="category__count">8</span></button>
-            <button class="category__btn" data-link="#back-end">Back-end<span class="category__count">2</span></button>
-            <button class="category__btn" data-link="#mobiles">Mobiles<span class="category__count">1</span></button>
+            <button class="category__btn active" data-fliter="*">ALL<span class="category__count">8</span></button>
+            <button class="category__btn" data-fliter="front-end">Front-end<span class="category__count">8</span></button>
+            <button class="category__btn" data-fliter="back-end">Back-end<span class="category__count">2</span></button>
+            <button class="category__btn" data-fliter="mobiles">Mobiles<span class="category__count">1</span></button>
         </div>
         <div class="work__projects">
-            <a href="#" class="project" target="blank">
+            <a href="#" class="project" target="blank" data-type="front-end">
                 <img class="project__img"src="/imgs/projects/project1.png" alt="project1">
                 <div class="project__description">
                     <h3>project1 Site</h3>
                     <span>Clone cording with HTML and CSS</span>
-                </div>
+                </div> 
             </a>
-            <a href="#" class="project" target="blank">
+            <a href="#" class="project" target="blank" data-type="front-end">
                 <img class="project__img"src="/imgs/projects/project2.png" alt="project2">
                 <div class="project__description">
                     <h3>project2 Site</h3>
                     <span>Clone cording with HTML and CSS</span>
                 </div>
             </a>
-            <a href="#" class="project" target="blank">
+            <a href="#" class="project" target="blank" data-type="front-end">
                 <img class="project__img"src="/imgs/projects/project3.png" alt="project3">
                 <div class="project__description">
                     <h3>project3 Site</h3>
                     <span>Clone cording with HTML and CSS</span>
                 </div>
             </a>
-            <a href="#" class="project" target="blank">
+            <a href="#" class="project" target="blank" data-type="back-end">
                 <img class="project__img"src="/imgs/projects/project4.png" alt="project4">
                 <div class="project__description">
                     <h3>project4 Site</h3>
                     <span>Clone cording with HTML and CSS</span>
                 </div>
             </a>
-            <a href="#" class="project" target="blank">
+            <a href="#" class="project" target="blank" data-type="back-end">
                 <img class="project__img"src="/imgs/projects/project5.png" alt="project5">
                 <div class="project__description">
                     <h3>project5 Site</h3>
                     <span>Clone cording with HTML and CSS</span>
                 </div>
             </a>
-            <a href="#" class="project" target="blank">
+            <a href="#" class="project" target="blank" data-type="back-end">
                 <img class="project__img"src="/imgs/projects/project6.png" alt="project6">
                 <div class="project__description">
                     <h3>project6 Site</h3>
                     <span>Clone cording with HTML and CSS</span>
                 </div>
             </a>
-            <a href="#" class="project" target="blank">
+            <a href="#" class="project" target="blank" data-type="back-end">
                 <img class="project__img"src="/imgs/projects/project7.png" alt="project7">
                 <div class="project__description">
                     <h3>project7 Site</h3>
                     <span>Clone cording with HTML and CSS</span>
                 </div>
             </a>
-            <a href="#" class="project" target="blank">
+            <a href="#" class="project" target="blank" data-type="mobiles">
                 <img class="project__img"src="/imgs/projects/project8.png" alt="project8">
                 <div class="project__description">
                     <h3>project8 Site</h3>
