javascript active Btn touch

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <h1>My Work</h1>
         <h2>Projects</h2>
         <div class="work__categories">
-            <button class="category__btn active" data-fliter="*">ALL<span class="category__count">8</span></button>
+            <button class="category__btn selected" data-fliter="*">ALL<span class="category__count">8</span></button>
             <button class="category__btn" data-fliter="front-end">Front-end<span class="category__count">8</span></button>
             <button class="category__btn" data-fliter="back-end">Back-end<span class="category__count">2</span></button>
             <button class="category__btn" data-fliter="mobiles">Mobiles<span class="category__count">1</span></button>
