--- a/index.html
+++ b/index.html
@@ -25,18 +25,16 @@
             <i class="fab fa-diaspora"></i>
             <a href="#">Young</a>
         </div>
-        <div class="navbar__menu">
-            <ul class="navbar__menu">
-                <li class="navbar__menu__item active" data-link="#home">Home</li>
-                <li class="navbar__menu__item" data-link="#about">About</li>
-                <li class="navbar__menu__item" data-link="#skills">Skills</li>
-                <li class="navbar__menu__item" data-link="#work">My Work</li>
-                <li class="navbar__menu__item" data-link="#testimonials">Testimonials</li>
-                <li class="navbar__menu__item" data-link="#contact">Contact</li>
-            </ul>
-        </div>
+        <ul class="navbar__menu">
+            <li class="navbar__menu__item active" data-link="#home">Home</li>
+            <li class="navbar__menu__item" data-link="#about">About</li>
+            <li class="navbar__menu__item" data-link="#skills">Skills</li>
+            <li class="navbar__menu__item" data-link="#work">My Work</li>
+            <li class="navbar__menu__item" data-link="#testimonials">Testimonials</li>
+            <li class="navbar__menu__item" data-link="#contact">Contact</li>
+        </ul>
         <!-- toggle button  -->
-        <button class="navbar__toggle-btn">
+        <button class="navbar__toggle-btn" data-link="#toggle-btn">
             <i class="fas fa-bars"></i>
         </button>
     </nav>
