javascript final touch

--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
         <h2>Projects</h2>
         <div class="work__categories">
             <button class="category__btn selected" data-fliter="*">ALL<span class="category__count">8</span></button>
-            <button class="category__btn" data-fliter="front-end">Front-end<span class="category__count">8</span></button>
-            <button class="category__btn" data-fliter="back-end">Back-end<span class="category__count">2</span></button>
+            <button class="category__btn" data-fliter="front-end">Front-end<span class="category__count">3</span></button>
+            <button class="category__btn" data-fliter="back-end">Back-end<span class="category__count">4</span></button>
             <button class="category__btn" data-fliter="mobiles">Mobiles<span class="category__count">1</span></button>
         </div>
         <div class="work__projects">
@@ -250,7 +250,7 @@
                     <img src="/imgs/testimonials/avatar1.jpeg" alt="People" class="testimonial__avatar">
                     <div class="testimonial__speech-bubble">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab vel maiores modi cupiditate dolore reiciendis nisi qui voluptatem unde provident optio, doloremque, obcaecati maxime repudiandae repellat non nostrum facilis ipsam.</p>
-                        <p class="name"><a href="#">obin</a> / samsung</p>
+                        <p class="name"><a href="#">bobin</a> / samsung</p>
                     </div>
                 </div>
                 <div class="testimonial">
