javascript intersectionObserver coding

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </button>
     </nav>
     <!-- home -->
-    <section id="home" class="section__common">
+    <section id="home" data-type="#home" class="section__common">
         <div class="home__container">
             <img src="imgs/profile.png" alt="young profile photo" class="home__avatar">
             <h1 class="home__title">Hello <br> i'm Young</h1>
@@ -48,7 +48,7 @@
         </div>
     </section>
     <!-- about -->
-    <section id="about" class="section__common section__container">
+    <section id="about" data-type="#about" class="section__common section__container">
         <h1>About me</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas vel facere dicta sunt! Consequatur omnis, atque iusto sapiente acc /usamus molestiae a sequi, repudiandae, consectetur fugiat magni quia nobis temporibus eos?</p>
         <div class="about__majors">
@@ -83,7 +83,7 @@
         </div>
     </section>
     <!-- skills -->
-    <section id="skills" class="section__common">
+    <section id="skills" data-type="#skills" class="section__common">
         <section class="section__common section__container">
             <h1>Skills</h1>
             <h2>Skills & Attributes</h2>
@@ -172,7 +172,7 @@
         </section>
     </section>
     <!-- work -->
-    <section id="work" class="section__common">
+    <section id="work" data-type="#work" class="section__common">
         <h1>My Work</h1>
         <h2>Projects</h2>
         <div class="work__categories">
@@ -241,7 +241,7 @@
         </div>
     </section>
     <!-- testimonials -->
-    <section id="testimonials" class="section__common">
+    <section id="testimonials" data-type="#testimonials" class="section__common">
         <div class="section__container">
             <h1>Testimonials</h1>
             <h3>see what they say about me</h3>
@@ -264,7 +264,7 @@
         </div>
     </section>
     <!-- contact -->
-    <section id="contact" class="section__common">
+    <section id="contact" data-type="#contact" class="section__common">
         <div class="contact">
             <h1 class="contact__title">Let's Talk</h1>
             <h2 class="contact__email">kug2001@gmail.com</h2>
@@ -281,7 +281,5 @@
             </div>
         </div>
     </section>
-    <footer>
-    </footer>
 </body>
 </html>
